added raw index route

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,7 @@
-//
+@import 'vars';
+@import 'generics';
+@import 'mixins';
+@import 'utils';
+@import 'header';
+@import 'main';
+@import 'footer';
