added show raw layout and style

--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -10,3 +10,15 @@
 .c-primary{
     color: $primary_color;
 }
+
+.d-flex{
+    display: flex;
+}
+
+.justify-between{
+    justify-content: space-between;
+}
+
+.align-center{
+    align-items: center;
+}
