--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,5 +3,6 @@
 @import 'mixins';
 @import 'utils';
 @import 'header';
-@import 'main';
+@import 'mainindex';
+@import 'mainshow';
 @import 'footer';
