added routing by id

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -140,6 +140,7 @@ section.jumbotron {
   width: 100%;
 }
 .series-list figure figcaption {
+  color: #fff;
   padding: 15px 0;
   text-align: left;
 }
