--- a/resources/sass/_mainindex.scss
+++ b/resources/sass/_mainindex.scss
@@ -53,6 +53,7 @@ section.jumbotron {
             }
         }
         figcaption {
+            color: #fff;
             padding: 15px 0;
             text-align: left;
         }
